@@ -6,6 +6,7 @@ Revision history for Cassandra-Client
       * Fix a class of memory leaks caused by recursion using closures
       * Add support for TIME/DATE/TINYINT/SMALLINT data types added in CQL 3.3
       * Avoid SIGPIPE when we connect to localhost but Cassandra is not present
+      * Add support for named parameters
 
 0.08    2016/10/25
 
